# algo

./: .gitignore  CMakeLists.txt
problems/: gen.sh
problems/35C/: 35C.cpp  README.md
problems/67A/: 67A.cpp  README.md
problems/812B/: 812B.cpp  README.md
problems/888C/: 888C.cpp  README.md
problems/903A/: 903A.cpp  README.md
problems/910A/: 910A.cpp  README.md
problems/938A/: 938A.cpp  README.md
problems/938B/: 938B.cpp  README.md
problems/939A/: 939A.cpp  README.md
problems/939B/: 939B.cpp  README.md
problems/940A/: 940A.cpp  README.md
problems/946A/: 946A.cpp  README.md
problems/946B/: 946B.cpp  README.md
problems/946C/: 946C.cpp  README.md
problems/950A/: 950A.cpp  README.md
problems/ABA12C/: ABA12C.cpp  README.md
problems/ACODE/: README.md  acode.cpp
problems/ADFRUITS/: ADFRUITS.cpp  README.md
problems/B-TREE/: README.md  b-tree.cpp
problems/BACTERIA/: README.md  bacteria.cpp
problems/BASH_MAN_COUNT/: bash_man_count.sh
problems/BASH_SUM/: README.md  bash_sum.sh
problems/BROWSER-TABS/: README.md  browser-tabs.cpp
problems/BSEARCH1/: README.md  bsearch1.cpp
problems/CALCLUHNCHECKSUM/: calcLuhnChecksum.hs
problems/CITYMAP/: README.md  citymap.cpp  main.cpp
problems/COMBINE-SUM/: README.md  combine-sum.cpp
problems/COMPLEMENT-TREE/: README.md  complement-tree.cpp
problems/COMPROC1/: COMPROC1.sh  fout
problems/COMPROC2/: COMPROC2.sh  file
problems/COMPROC3/: comproc3.sh
problems/COMPROC4/: comproc4.sh
problems/CONVERT/: README.md  convert.rkt  convertcsv.csv
problems/DIJKSTRASHORTREACH/: README.md  dijkstrashortreach.cpp
problems/DISCRETE_RANDOM_VAR/: README.md  discrete_random_var.R
problems/DP_STUDENT/: README.md  dp_student.cpp
problems/EASY_SELECT_SQL/: README.md  easy_select_sql.sql
problems/EXTRA_LONG_FACTORIALS/: EXTRA_LONG_FACTORIALS.rkt  README.md
problems/GAMEOFLIFE/: gameOfLife.hs
problems/GEN_BUY/: 1.in  GEN_BUY.cpp  README.md
problems/HEAP/: heap.cpp
problems/IOIPALIN/: IOIPALIN.cpp  README.md
problems/ISBALANCED/: isBalanced.hs
problems/KMEANS/: KMEANS.py
problems/KNAPSACK/: README.md
problems/KNIGHT-TOUR/: knight-tour.cpp
problems/KNN/: KNN.py  README.md  requirements.txt
problems/LCS0/: lcs0.cpp
problems/LONGEST-PATH/: README.md  longest-path.cpp
problems/MACHINES/: machines.cpp
problems/MAJORITY_EL/: README.md  majority_el.cpp
problems/MAXIMIZE/: maximize.rkt
problems/MIN_OP/: README.md  min_op.cpp
problems/MIX/: README.md  mix.rkt
problems/MONOM/: MONOM.cpp  README.md
problems/NAIVEBAYES/: NaiveBayes.py  README.md  data.csv  test.csv
problems/NUM-BIGGER-ELEMENTS/: README.md  num-bigger-elements.rkt
problems/PAIR-COMPOSE/: README.md  pair-compose.rkt
problems/PLUS_MINUS/: PLUS_MINUS.cpp  README.md
problems/PRIME1/: README.md  prime1.cpp
problems/PRODUCT/: README.md  product.cpp
problems/QUICKSORT1-PARTITION/: QUICKSORT1-PARTITION.rkt  README.md
problems/RECURSIVE-DIGIT-SUM/: README.md  recursive-digit-sum.js  recursive-digit-sum.rkt
problems/REPEATER/: README.md  repeater.rkt
problems/REPLACE/: README.md  replace.rkt
problems/REVERSEORDSUFF/: README.md  reverseOrdSuff.hs
problems/RLE/: rle.rkt
problems/SHOP_KEEPER/: README.md  SHOP_KEEPER.py
problems/SLIDING/: README.md  sliding.cpp
problems/SLIDING-A-STAR/: 2.in  sliding-a-star.cpp
problems/SQUARES/: README.md  squares.cpp
problems/STACK/: README.md  stack.cpp
problems/SUM-NUMBERS/: sum-numbers.rkt
problems/SUM-NUMBERS2/: README.md  sum-numbers2.rkt
problems/SUM_TO_13/: SUM_TO_13.cpp
problems/SWITCHSUM/: README.md  switchsum.rkt
problems/TELE-BFS/: 1.in  README.md  tele-bfs.cpp
problems/TEST/: README.md  test  test.hs
problems/THE-POWER-SUM/: README.md  the-power-sum.rkt
problems/TIC_TOE_MIN_MAX/: README.md  TIC_TOE_MIN_MAX.cpp  a
problems/TRUCKS/: trucks.cpp
problems/WHERE/: README.md  where.rkt
problems/c/: 01.c  12_1.c  12_2.c  (+10 more)
(+2 files in other folders)
