set(CMAKE_CXX_STANDARD 11)
add_executable(PLUS_MINUS problems/PLUS_MINUS/PLUS_MINUS.cpp)

add_executable(B-TREE problems/B-TREE/b-tree.cpp)

add_executable(Stack problems/STACK/stack.cpp)

add_executable(MONOM problems/MONOM/MONOM.cpp)

add_executable(BROWSER-TABS problems/BROWSER-TABS/browser-tabs)

add_executable(HEAP problems/HEAP/heap)

add_executable(LINKED-LIST problems/LINKED-LIST/linked-list.cpp)

add_executable(CITY-MAP problems/CITYMAP/main)

add_executable(KNIGHT-TOUR problems/KNIGHT-TOUR/knight-tour.cpp)

add_executable(LONGEST-PATH problems/LONGEST-PATH/longest-path.cpp)

add_executable(COMPLEMENT-TREE problems/COMPLEMENT-TREE/complement-tree.cpp)
add_executable(COMBINE-SUM problems/COMBINE-SUM/combine-sum.cpp)