cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 14)
add_executable(PLUS_MINUS problems/PLUS_MINUS/PLUS_MINUS.cpp)

add_executable(B-TREE problems/B-TREE/b-tree.cpp)

add_executable(Stack problems/STACK/stack.cpp)

add_executable(MONOM problems/MONOM/MONOM.cpp)

add_executable(BROWSER-TABS problems/BROWSER-TABS/browser-tabs)

add_executable(HEAP problems/HEAP/heap)

add_executable(LINKED-LIST problems/LINKED-LIST/linked-list.cpp)

add_executable(CITY-MAP problems/CITYMAP/main)

add_executable(KNIGHT-TOUR problems/KNIGHT-TOUR/knight-tour.cpp)

add_executable(LONGEST-PATH problems/LONGEST-PATH/longest-path.cpp)

add_executable(COMPLEMENT-TREE problems/COMPLEMENT-TREE/complement-tree.cpp)
add_executable(COMBINE-SUM problems/COMBINE-SUM/combine-sum.cpp)
add_executable(938B problems/938B/938B.cpp)
add_executable(938A problems/938A/938A.cpp)
add_executable(939A problems/939A/939A.cpp)
add_executable(939B problems/939B/939B.cpp)
add_executable(946A problems/946A/946A.cpp)
add_executable(946B problems/946B/946B.cpp)
add_executable(946C problems/946C/946C.cpp)
add_executable(940A problems/940A/940A.cpp)
add_executable(950A problems/950A/950A.cpp)
add_executable(910A problems/910A/910A.cpp)
add_executable(812B problems/812B/812B.cpp)
add_executable(35C problems/35C/35C.cpp)
add_executable(888C problems/888C/888C.cpp)
add_executable(903A problems/903A/903A.cpp)
add_executable(67A problems/67A/67A.cpp)
add_executable(SUM_TO_13 problems/SUM_TO_13/SUM_TO_13.cpp)
add_executable(DIJKSTRA-SHORT problems/DIJKSTRASHORTREACH/dijkstrashortreach.cpp)
add_executable(ACODE problems/ACODE/acode.cpp)
add_executable(KNAPSACK problems/KNAPSACK/knapsack.cpp)
add_executable(lcs0 problems/LCS0/lcs0.cpp)
add_executable(squares problems/SQUARES/squares.cpp)
add_executable(trucks problems/TRUCKS/trucks.cpp)
add_executable(dp_student problems/DP_STUDENT/dp_student.cpp)
add_executable(IOIPALIN problems/IOIPALIN/IOIPALIN.cpp)
add_executable(ABA12C problems/ABA12C/ABA12C.cpp)
add_executable(ADFRUITS problems/ADFRUITS/ADFRUITS.cpp)
